# MILMAP

./: .gitignore  README.md  coverage_effects_helper.py  generate_scenario.py  phase_coordinator.py  planning_coordinator.py  priority_scorer.py  pyproject.toml  relationship_helper.py  run_scenario.py
docs/: architecture.md  basemaps.md  current_state.md  end_to_end_capability_workflow.md  full_agent_build_plan.md  llm_contract.md  map_context.md  notifications.md  operations.md  scenario_generator_upgrade.md  smarter_placement_accuracy_plan.md  state_of_art_roadmap.md  strategic_scenario_implementation_plan.md  visual_briefings.md
examples/: abstract_buffer.json  advanced_regional_scenario.json  corridor.json  eastern_mediterranean_advanced.json  hex_grid.json  israel_iran_lebanon_crisis_buildplan.json  orlando_metro_shtf_buildplan.json  orlando_real_world_demo.json  orlando_shtf_civil_emergency.json  real_world_boundary_tool_call.json  regional_coordination_scenario.json  scenario_overlay.json  scenario_plan.json  tampa_map_test_buildplan.json
schemas/: agent_plan.schema.json  scenario_plan.schema.json
src/milmap_engine/: __init__.py  agent.py  builder.py  cli.py  geojson.py  geometry.py  legend.py  llm.py  map_context.py  models.py  notify.py  projection.py  refinement.py  routing.py  scenario.py  server.py  store.py  (+3 more)
tests/: test_basemaps.py  test_builder.py  test_geometry.py  test_legend.py  test_map_context.py  test_pmtiles_basemaps.py  test_refinement.py  test_routing.py  test_scenario.py  test_shtf_scenario.py  test_store.py  test_visual_briefing.py
(+6 files in other folders)
